# MyBiOut

./: .gitignore  LICENSE  README.md  pyproject.toml
mybiout/: __init__.py  config.ini  main.py
mybiout/pages/: apis.py  index.html  utils.py
mybiout/pages/bbdown/: bbdown.html  bbdown.py
mybiout/pages/localout/: localout.html  localout.py
mybiout/pages/man/: man.html  man.py
mybiout/pages/mdout/: mdout.html  mdout.py
mybiout/pages/ohmyconfig/: ohmyconfig.html  ohmyconfig.py
